Jun 23, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/sio.c: Convert more ASCII characters to half-width.

Jun 21, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/psxbios.c: Use a separate flag to identify whether we are
   inside a softcall or not, as ra might be modified inside the interrupt
   handler.
 * libpcsxcore/psxbios.h: Likewise.
 * libpcsxcore/psxcommon.c: Likewise.
 * plugins/dfsound/spu.c: Moved initialization routine from SPUopen() into
   SPUinit().
 * plugins/dfsound/freeze.c: Save spuAddr as well.
 * po/Makefile.in.in: Silenced warning.

Jun 20, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfsound/freeze.c: Reset lastch when loading state, which fixes
   occasionally crash after state loading.
 * plugins/dfsound/spu.c: Likewise.

Jun 19, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * macosx/PcsxController.m: Do not simulate CD case open if user clicked
   Cancel in switch ISO dialog.

Jun 16, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/psxcommon.c: Do not allow hotkeys inside a softcall from HLE
   BIOS.
 * configure.ac: Removed -fno-dse, which is no longer necessary.

Jun 9, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * win32/pcsx.rc: Embed manifest properly under MSVC6.

Jun 8, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfcdrom/cdr-linux.c: Implemented CDRgetTE() and CDRreadCDDA() (not
   tested).
 * plugins/dfcdrom/cdr-null.c: Added CDRgetBufferSub().
 * libpcsxcore/plugins.c: CDRgetBufferSub() is now mandatory (again) :)

Jun 7, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/cdrom.c: Use boolean/TRUE/FALSE for where it should, don't use
   "long" type for cdrStruct which is to be saved in savestates.
 * libpcsxcore/cdrom.h: Likewise.
 * libpcsxcore/misc.c: Bumped savestate version.
 * libpcsxcore/plugins.c: Added support for CDRreadCDDA()/CDRgetTE() (not used
   for now).
 * libpcsxcore/plugins.h: Likewise.
